--- a/package.json
+++ b/package.json
@@ -99,6 +99,8 @@
     "electron-squirrel-startup": "^1.0.0",
     "electron-window-state": "^5.0.3",
     "lodash": "^4.17.20",
-    "update-electron-app": "^1.5.0"
+    "nedb-promises": "^4.0.4",
+    "update-electron-app": "^1.5.0",
+    "xlsx": "^0.16.7"
   }
 }
