--- a/.gitignore
+++ b/.gitignore
@@ -107,3 +107,9 @@ dist
 # db/compiley.db
 # db/compiley.db-shm
 # db/compiley.db-wal
+
+# Data stuff
+data/2018/
+data/2019/
+data/2020/
+data/comparison/
