--- a/.gitignore
+++ b/.gitignore
@@ -104,9 +104,9 @@ dist
 .tern-port
 
 # Sqlite database files
-# db/compiley.db
-# db/compiley.db-shm
-# db/compiley.db-wal
+db/compiley.db
+db/compiley.db-shm
+db/compiley.db-wal
 
 # Data stuff
 data/2018/
