--- a/package.json
+++ b/package.json
@@ -98,8 +98,10 @@
     "better-sqlite3": "^7.1.1",
     "electron-squirrel-startup": "^1.0.0",
     "electron-window-state": "^5.0.3",
+    "googleapis": "^61.0.0",
     "lodash": "^4.17.20",
     "nedb-promises": "^4.0.4",
+    "readline": "^1.3.0",
     "update-electron-app": "^1.5.0",
     "xlsx": "^0.16.7"
   }
