--- a/package.json
+++ b/package.json
@@ -96,10 +96,13 @@
   "dependencies": {
     "axios": "^0.20.0",
     "better-sqlite3": "^7.1.1",
+    "cors": "^2.8.5",
     "electron-squirrel-startup": "^1.0.0",
     "electron-window-state": "^5.0.3",
+    "express": "^4.17.1",
     "googleapis": "^61.0.0",
     "lodash": "^4.17.20",
+    "mime": "1",
     "nedb-promises": "^4.0.4",
     "readline": "^1.3.0",
     "update-electron-app": "^1.5.0",
