--- a/package.json
+++ b/package.json
@@ -7,15 +7,19 @@
     "type": "git",
     "url": "https://github.com/trogulja/Compiley.git"
   },
+  "private": true,
   "main": ".webpack/main",
   "scripts": {
-    "start": "electron-forge start",
-    "package": "electron-forge package",
-    "make": "electron-forge make",
-    "publish": "electron-forge publish",
+    "serve": "vue-cli-service serve",
+    "build": "vue-cli-service build",
+    "lint": "vue-cli-service lint",
+    "electron:build": "vue-cli-service electron:build",
+    "electron:serve": "vue-cli-service electron:serve",
+    "postinstall": "electron-builder install-app-deps",
+    "postuninstall": "electron-builder install-app-deps",
+    "webpack:showerror": "webpack --display-error-details",
     "sqlite": "electron-rebuild -f -w better-sqlite3",
-    "sqlite-reset": "yarn add better-sqlite3",
-    "lint": "echo \"No linting configured\""
+    "sqlite-reset": "yarn add better-sqlite3"
   },
   "keywords": [],
   "author": {
@@ -23,52 +27,23 @@
     "email": "tibor.rogulja@tiskarazagreb.hr"
   },
   "license": "MIT",
-  "config": {
-    "forge": {
-      "packagerConfig": {
-        "icon": "./src/img/lamp.ico"
-      },
-      "makers": [
-        {
-          "name": "@electron-forge/maker-squirrel",
-          "config": {
-            "name": "foldermonitor"
-          }
-        },
-        {
-          "name": "@electron-forge/maker-zip",
-          "platforms": [
-            "darwin"
-          ]
-        },
-        {
-          "name": "@electron-forge/maker-deb",
-          "config": {}
-        },
-        {
-          "name": "@electron-forge/maker-rpm",
-          "config": {}
-        }
-      ],
-      "plugins": [
-        [
-          "@electron-forge/plugin-webpack",
-          {
-            "mainConfig": "./webpack.main.config.js",
-            "renderer": {
-              "config": "./webpack.renderer.config.js",
-              "entryPoints": [
-                {
-                  "html": "./src/index.html",
-                  "js": "./src/renderer.js",
-                  "name": "main_window"
-                }
-              ]
-            }
-          }
-        ]
-      ]
-    }
+  "dependencies": {
+    "axios": "^0.20.0",
+    "better-sqlite3": "^7.1.1",
+    "core-js": "^3.6.5",
+    "cors": "^2.8.5",
+    "electron-squirrel-startup": "^1.0.0",
+    "electron-window-state": "^5.0.3",
+    "express": "^4.17.1",
+    "googleapis": "^61.0.0",
+    "lodash": "^4.17.20",
+    "mime": "1",
+    "nedb-promises": "^4.0.4",
+    "readline": "^1.3.0",
+    "update-electron-app": "^1.5.0",
+    "vue": "^2.6.12",
+    "vuetify": "^2.3.16",
+    "xlsx": "^0.16.7"
   },
   "devDependencies": {
     "@babel/core": "^7.11.1",
@@ -83,29 +58,48 @@
     "@electron-forge/maker-zip": "6.0.0-beta.52",
     "@electron-forge/plugin-webpack": "6.0.0-beta.52",
     "@marshallofsound/webpack-asset-relocator-loader": "^0.5.0",
+    "@vue/cli-plugin-babel": "~4.5.0",
+    "@vue/cli-plugin-eslint": "~4.5.0",
+    "@vue/cli-service": "~4.5.0",
+    "babel-eslint": "^10.1.0",
     "babel-loader": "^8.1.0",
-    "css-loader": "^3.0.0",
+    "css-loader": "^4.3.0",
+    "deepmerge": "^4.2.2",
     "dotenv": "^8.2.0",
-    "electron": "9.1.1",
+    "electron": "^9.0.0",
+    "electron-devtools-installer": "^3.1.0",
     "electron-rebuild": "^1.11.0",
+    "eslint": "^6.7.2",
+    "eslint-plugin-vue": "^6.2.2",
+    "fibers": "^5.0.0",
     "node-loader": "^0.6.0",
     "style-loader": "^0.23.1",
     "url-loader": "^4.1.0",
-    "webpack": "^4.44.1"
+    "vue-cli-plugin-electron-builder": "~2.0.0-rc.4",
+    "vue-cli-plugin-vuetify": "~2.0.7",
+    "vue-loader": "^15.9.3",
+    "vue-template-compiler": "^2.6.11",
+    "vuetify-loader": "^1.6.0",
+    "webpack": "^4.44.2",
+    "webpack-cli": "^4.1.0"
   },
-  "dependencies": {
-    "axios": "^0.20.0",
-    "better-sqlite3": "^7.1.1",
-    "cors": "^2.8.5",
-    "electron-squirrel-startup": "^1.0.0",
-    "electron-window-state": "^5.0.3",
-    "express": "^4.17.1",
-    "googleapis": "^61.0.0",
-    "lodash": "^4.17.20",
-    "mime": "1",
-    "nedb-promises": "^4.0.4",
-    "readline": "^1.3.0",
-    "update-electron-app": "^1.5.0",
-    "xlsx": "^0.16.7"
-  }
+  "eslintConfig": {
+    "root": true,
+    "env": {
+      "node": true
+    },
+    "extends": [
+      "plugin:vue/essential",
+      "eslint:recommended"
+    ],
+    "parserOptions": {
+      "parser": "babel-eslint"
+    },
+    "rules": {}
+  },
+  "browserlist": [
+    "> 1%",
+    "last 2 versions",
+    "not dead"
+  ]
 }
