--- a/package.json
+++ b/package.json
@@ -8,12 +8,12 @@
     "url": "https://github.com/trogulja/Compiley.git"
   },
   "private": true,
-  "main": ".webpack/main",
+  "main": "./background.js",
   "scripts": {
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
     "lint": "vue-cli-service lint",
-    "electron:build": "vue-cli-service electron:build --config electron-builder.yml",
+    "electron:build": "vue-cli-service electron:build",
     "electron:serve": "vue-cli-service electron:serve",
     "postinstall": "electron-builder install-app-deps",
     "postuninstall": "electron-builder install-app-deps",
