--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "lint": "vue-cli-service lint",
     "electron:build": "vue-cli-service electron:build",
     "electron:serve": "vue-cli-service electron:serve",
+    "release": "build",
     "postinstall": "electron-builder install-app-deps",
     "postuninstall": "electron-builder install-app-deps",
     "webpack:showerror": "webpack --display-error-details",
@@ -32,7 +33,9 @@
     "better-sqlite3": "^7.1.1",
     "core-js": "^3.6.5",
     "cors": "^2.8.5",
+    "electron-log": "^4.3.0",
     "electron-squirrel-startup": "^1.0.0",
+    "electron-updater": "^4.3.5",
     "electron-window-state": "^5.0.3",
     "express": "^4.17.1",
     "googleapis": "^61.0.0",
