--- a/package.json
+++ b/package.json
@@ -7,7 +7,6 @@
     "type": "git",
     "url": "https://github.com/trogulja/Compiley.git"
   },
-  "private": true,
   "main": "./background.js",
   "scripts": {
     "serve": "vue-cli-service serve",
@@ -15,7 +14,7 @@
     "lint": "vue-cli-service lint",
     "electron:build": "vue-cli-service electron:build",
     "electron:serve": "vue-cli-service electron:serve",
-    "release": "build",
+    "electron:draft": "vue-cli-service electron:build -p always",
     "postinstall": "electron-builder install-app-deps",
     "postuninstall": "electron-builder install-app-deps",
     "webpack:showerror": "webpack --display-error-details",
@@ -100,5 +99,13 @@
     "> 1%",
     "last 2 versions",
     "not dead"
+  ],
+  "publish": [
+    {
+      "provider": "github",
+      "owner": "trogulja",
+      "repo": "Compiley",
+      "releaseType": "draft"
+    }
   ]
 }
